fix index on smaller screens :

--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -21,12 +21,12 @@
     @include transform(translateY(-300px));
   }
 
-  60% {
+  30% {
     opacity: 1;
     @include transform (translateY(20px));
   }
 
-  80% {
+  60% {
     @include transform(translateY(-8px));
   }
 
@@ -41,6 +41,7 @@
   @include animation-duration(1.5s);
   @include animation-fill-mode(both);
   @include animation-iteration-count(1);
+  @include animation-timing-function($ease-out-back);
 }
 
 @include keyframes(spin) {
